feat: Remove all config_class functions.

--- a/examples/jax/quickstart.ipynb
+++ b/examples/jax/quickstart.ipynb
@@ -556,11 +556,7 @@
         "\n",
         "    @staticmethod\n",
         "    def name() -> str:\n",
-        "        return \"gae_fn\"\n",
-        "\n",
-        "    @staticmethod\n",
-        "    def config_class() -> Optional[Callable]:\n",
-        "        return AConfig"
+        "        return \"gae_fn\""
       ]
     },
     {
