--- a/examples/jax/quickstart.ipynb
+++ b/examples/jax/quickstart.ipynb
@@ -641,17 +641,17 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 ('mava')",
+      "display_name": "Python 3.10.4 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.10"
+      "version": "3.10.4"
     },
     "vscode": {
       "interpreter": {
-        "hash": "03a8f68029c4c1e22b1ecab02e3f85c25bc51e81d0e5f5c56dee24aca305124c"
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
       }
     }
   },
