chore: remove unused imports

--- a/examples/jax/quickstart.ipynb
+++ b/examples/jax/quickstart.ipynb
@@ -504,7 +504,7 @@
         "\"\"\"Trainer components for advantage calculations.\"\"\"\n",
         "\n",
         "from dataclasses import dataclass\n",
-        "from typing import Callable, List, Optional, Tuple, Type\n",
+        "from typing import List, Optional, Tuple, Type\n",
         "from mava.components.jax.training.advantage_estimation import GAE\n",
         "\n",
         "import jax\n",
@@ -649,17 +649,17 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.10.4 64-bit",
+      "display_name": "Python 3.8.10 ('mava')",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.4"
+      "version": "3.8.10"
     },
     "vscode": {
       "interpreter": {
-        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+        "hash": "03a8f68029c4c1e22b1ecab02e3f85c25bc51e81d0e5f5c56dee24aca305124c"
       }
     }
   },
