chore: Updated examples.

--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -11,7 +11,7 @@
         "\n",
         "### This notebook provides an easy introducion to the [Mava](https://github.com/instadeepai/Mava) framework by showing how to construct a multi-agent system, and train it from scratch in a simple evironment. \n",
         "\n",
-        "<a href=\"https://colab.research.google.com/github/instadeepai/Mava/blob/develop/examples/jax/quickstart.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
+        "<a href=\"https://colab.research.google.com/github/instadeepai/Mava/blob/develop/examples/quickstart.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
       ]
     },
     {
@@ -637,7 +637,7 @@
         "id": "tlzWiU7SVhpw"
       },
       "source": [
-        "Congratulations! You have created your own custom system. We hope that this tutorial has given you a taste of what Mava is capable of. We are excited to see how you use the repo. For more examples using different systems, environments and architectures, visit our [github page](https://github.com/instadeepai/Mava/tree/develop/examples/jax)."
+        "Congratulations! You have created your own custom system. We hope that this tutorial has given you a taste of what Mava is capable of. We are excited to see how you use the repo. For more examples using different systems, environments and architectures, visit our [github page](https://github.com/instadeepai/Mava/tree/develop/ examples)."
       ]
     }
   ],
