fix: Update networks to allow for ff layers before and after the recurrent layers.

--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -132,8 +132,8 @@
         "# Create the network factory.\n",
         "def network_factory(*args: Any, **kwargs: Any) -> Any:\n",
         "    return ippo.make_default_networks(  # type: ignore\n",
-        "        policy_layer_sizes=(256, 256, 256),\n",
-        "        critic_layer_sizes=(512, 512, 256),\n",
+        "        policy_layer_sizes=(64, 64),\n",
+        "        critic_layer_sizes=(64, 64, 64),\n",
         "        *args,\n",
         "        **kwargs,\n",
         "    )\n",
@@ -649,17 +649,17 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 ('mava')",
+      "display_name": "Python 3.10.6 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.10"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "03a8f68029c4c1e22b1ecab02e3f85c25bc51e81d0e5f5c56dee24aca305124c"
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
       }
     }
   },
