feat: Remove RoboCup and convert discounts to valid_steps.

--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -530,7 +530,7 @@
         "\n",
         "    def on_training_utility_fns(self, trainer: SystemTrainer) -> None:\n",
         "        def simpler_advantage_estimate(\n",
-        "            rewards: jnp.ndarray, discounts: jnp.ndarray, values: jnp.ndarray\n",
+        "            rewards: jnp.ndarray, valid_steps: jnp.ndarray, values: jnp.ndarray\n",
         "        ) -> Tuple[jnp.ndarray, jnp.ndarray]:\n",
         "\n",
         "\n",
