fix: Change sample_batch_size to epoch_batch_size.

--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -245,7 +245,7 @@
         "    policy_optimiser=policy_optimiser,\n",
         "    critic_optimiser=critic_optimiser,\n",
         "    run_evaluator=True,\n",
-        "    sample_batch_size=5,\n",
+        "    epoch_batch_size=5,\n",
         "    num_epochs=15,\n",
         "    num_executors=2,\n",
         "    multi_process=True,\n",
@@ -279,7 +279,7 @@
         "\n",
         "`run_evaluator` - a flag indicating whether a separate environment process should be run that tracks the system's performance using Tensorboard and possibly gameplay recordings.\n",
         "\n",
-        "`sample_batch_size` - the batch size to use in the trainer when updating the agent networks.\n",
+        "`epoch_batch_size` - the batch size to use in the trainer when updating the agent networks.\n",
         "\n",
         "`num_epochs` - the number of epochs to train on sampled data before discarding it.\n",
         "\n",
@@ -620,7 +620,7 @@
         "    policy_optimiser=policy_optimiser,\n",
         "    critic_optimiser=critic_optimiser,\n",
         "    run_evaluator=True,\n",
-        "    sample_batch_size=5,\n",
+        "    epoch_batch_size=5,\n",
         "    num_epochs=15,\n",
         "    num_executors=1,\n",
         "    multi_process=True,\n",
