Fixed import of required packages in quickstart to run on Colab.

--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -42,15 +42,20 @@
       "source": [
         "%%capture\n",
         "#@title Install required packages. (Run Cell)\n",
-        "! rm -r ./Mava\n",
-        "! git clone https://github.com/instadeepai/Mava.git\n",
-        "!pip install ./Mava[reverb,jax,launchpad,envs]\n",
+        "# Fix common bug in installing 'box-2d'\n",
+        "!apt-get install swig\n",
         "\n",
-        "# Installs for agent visualisation.\n",
-        "!pip install ./Mava[record_episode]\n",
-        "! apt-get update -y &&  apt-get install -y xvfb &&  apt-get install -y python-opengl && apt-get install ffmpeg && pip install pyvirtualdisplay \n",
-        "# Google colab has an old version of cloudpickle - issue with lp.  \n",
-        "!pip install cloudpickle -U"
+        "# Get Mava\n",
+        "%pip install \"id-mava[reverb,jax,envs] @ git+https://github.com/instadeepai/mava.git\"\n",
+        "\n",
+        "# Visualisation stuff\n",
+        "!apt-get update -y &&  apt-get install -y xvfb &&  apt-get install -y python-opengl && apt-get install ffmpeg && pip install pyvirtualdisplay \n",
+        "\n",
+        "# Colab has an old version of cloudpickle\n",
+        "%pip install cloudpickle -U\n",
+        "\n",
+        "# Colab has an old/conflicting numpy version\n",
+        "%pip install numpy"
       ]
     },
     {
