Removed numpy re-import, but prompt the user to restart the runtime before continuing.

--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -52,10 +52,15 @@
         "!apt-get update -y &&  apt-get install -y xvfb &&  apt-get install -y python-opengl && apt-get install ffmpeg && pip install pyvirtualdisplay \n",
         "\n",
         "# Colab has an old version of cloudpickle\n",
-        "%pip install cloudpickle -U\n",
-        "\n",
-        "# Colab has an old/conflicting numpy version\n",
-        "%pip install numpy"
+        "%pip install cloudpickle -U"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "At this point, it is necessary to restart the runtime. On the top menu, click `Runtime -> Restart runtime`. Alternatively, use the shortcut, `⌘/Ctrl + M .`"
       ]
     },
     {
