--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Pl4ed6X22tZq"
       },
@@ -42,15 +42,31 @@
       "source": [
         "%%capture\n",
         "#@title Install required packages. (Run Cell)\n",
-        "! rm -r ./Mava\n",
-        "! git clone https://github.com/instadeepai/Mava.git\n",
-        "!pip install ./Mava[reverb,jax,launchpad,envs]\n",
+        "# Fix common bug in installing 'box-2d'\n",
+        "!apt-get install swig\n",
         "\n",
-        "# Installs for agent visualisation.\n",
-        "!pip install ./Mava[record_episode]\n",
-        "! apt-get update -y &&  apt-get install -y xvfb &&  apt-get install -y python-opengl && apt-get install ffmpeg && pip install pyvirtualdisplay \n",
-        "# Google colab has an old version of cloudpickle - issue with lp.  \n",
-        "!pip install cloudpickle -U"
+        "# Get Mava\n",
+        "%pip install \"id-mava[reverb,jax,envs] @ git+https://github.com/instadeepai/mava.git\"\n",
+        "\n",
+        "# Visualisation stuff\n",
+        "!apt-get update -y &&  apt-get install -y xvfb &&  apt-get install -y python-opengl && apt-get install ffmpeg && pip install pyvirtualdisplay \n",
+        "\n",
+        "# Colab has an old version of cloudpickle\n",
+        "%pip install cloudpickle -U\n",
+        "\n",
+        "# Agent visualisation dependencies\n",
+        "!apt-get install -y python-opengl\n",
+        "!apt-get install -y xvfb python-opengl ffmpeg\n",
+        "%pip install pyglet==1.3.2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mfyWPW0LHqaB"
+      },
+      "source": [
+        "At this point, it is necessary to restart the runtime. On the top menu, click `Runtime -> Restart runtime`. Alternatively, use the shortcut, `⌘/Ctrl + M .`"
       ]
     },
     {
@@ -73,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "8SvWrsWExz31"
       },
@@ -96,11 +112,14 @@
         "import os\n",
         "from IPython.display import HTML\n",
         "from pyvirtualdisplay import Display\n",
+        "import pyglet\n",
         "\n",
         "display = Display(visible=0, size=(1024, 768))\n",
         "display.start()\n",
+        "config = pyglet.gl.Config(double_buffer=True)\n",
         "os.environ[\"DISPLAY\"] = \":\" + str(display.display)\n",
-        "os.environ[\"XLA_PYTHON_CLIENT_PREALLOCATE\"]= \"false\""
+        "os.environ[\"XLA_PYTHON_CLIENT_PREALLOCATE\"]= \"false\"\n",
+        "os.environ['PYGLET_SHADOW_WINDOW'] = '0'\n"
       ]
     },
     {
@@ -123,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "UJ4-cN2dkXjq"
       },
@@ -159,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "Fw_4dR1jj-Wv"
       },
@@ -186,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "u8J05yDlk-ya"
       },
@@ -224,11 +243,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "CS618jAtxM1h"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CS618jAtxM1h",
+        "outputId": "893cab95-d27a-470f-9a0d-0b4f2d459807"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+          ]
+        }
+      ],
       "source": [
         "# Create the system.\n",
         "system = ippo.IPPOSystem()\n",
@@ -301,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "gsoLWPTClnMt"
       },
@@ -331,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "l181SBwtBo9M"
       },
@@ -384,11 +415,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "HXB1IKfysMT6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HXB1IKfysMT6",
+        "outputId": "29e677af-95d7-466e-a52b-27bfdb94043f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "agents_3_eval_episode.html\n"
+          ]
+        }
+      ],
       "source": [
         "! ls ~/mava/$mava_id/recordings"
       ]
@@ -644,7 +687,6 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
       "provenance": [],
       "toc_visible": true
     },
