fix: update the notebook

--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "5l-eEkH-2f0D",
         "cellView": "form"
@@ -59,11 +59,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Restarting the runtime is necessary after reinstalling JAX in Colab to ensure that the changes take effect and that the runtime environment is properly configured for the updated JAX version."
+      ],
+      "metadata": {
+        "id": "IMBnurbl-9Ez"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2pMV4rGjTQAw",
-        "cellView": "form"
+        "id": "2pMV4rGjTQAw"
       },
       "outputs": [],
       "source": [
@@ -74,14 +82,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FjXA8JyI1_YW",
         "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "#@title Import required packages. (Run Cell)\n",
+        "#@title Import required packages.\n",
         "\n",
         "from typing import Any, Callable, Dict, Sequence, Tuple\n",
         "from colorama import Fore, Style\n",
@@ -148,12 +156,12 @@
       "source": [
         "### Network\n",
         "\n",
-        "Initially, we construct the ActorCritic network using components from the Flax library. The application of the actor-critic's function will then be \"vmapped\" across distinct agents, with the in_axes parameter applied solely to the observation and not the network parameters. To learn more about `vmap` in JAX, please see the documentation [here](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html)."
+        "Initially, we construct the ActorCritic network using components from the Flax library. The application of the actor-critic's function will then be \"vmapped\" across distinct agents, with the `in_axes` parameter applied solely to the observation and not the network parameters. To learn more about `vmap` in JAX, please see the documentation [here](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html)."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Sss6opmC6lmp",
         "colab": {
@@ -226,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "4VVjKmgW64Ct"
       },
@@ -462,13 +470,13 @@
         "id": "4idyWUhW68oS"
       },
       "source": [
-        "### Trainer Setup\n",
+        "### Learner Setup\n",
         "The learner setup initializes components for training: the learner function, neural network, optimizer, environment, and states. It creates a function for learning, employs parallel processing over the cores for efficiency, and sets up initial states."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "eWjNSGvZ7ALw"
       },
@@ -569,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "DU7OVSm6HM6q"
       },
@@ -596,8 +604,8 @@
         "    key, reset_key = jax.random.split(key)\n",
         "    state, timestep = reset_fn(reset_key)\n",
         "    states.append(state)\n",
-        "    episode_return=0\n",
-        "    episode_length=0\n",
+        "    episode_return = 0\n",
+        "    episode_length = 0\n",
         "    while not timestep.last():\n",
         "        key, action_key = jax.random.split(key)\n",
         "        pi, _ = apply_fn(params, timestep.observation)\n",
@@ -635,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "OwkZqb8y8GYG"
       },
@@ -702,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "wexJ0Slr8INC"
       },
@@ -768,7 +776,7 @@
       "metadata": {
         "id": "etGS9OCfLhQR"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -803,7 +811,7 @@
       "metadata": {
         "id": "gp-FLgLSNg29"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +877,7 @@
         },
         "outputId": "07ea10b8-8d76-4760-891b-be8de4ed4d01"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -932,7 +940,7 @@
         "id": "ZA97hcxyzgOU",
         "outputId": "999b3cba-6add-483b-a75f-e752899a91ee"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,7 +991,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "3kSjCFr_-xE3",
         "colab": {
@@ -1068,7 +1076,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "lMSKw2_q8YHW",
         "colab": {
@@ -1092,7 +1100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "Xq_HhYIrWOWK",
         "colab": {
@@ -1132,7 +1140,12 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "JaIw_5YaUSAB",
+        "IFraNFqY6s7_",
+        "4idyWUhW68oS"
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3",
