chore: update requirement install in the quickstart notebook

--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -54,7 +54,7 @@
       "source": [
         "%%capture\n",
         "# @title Install Mava\n",
-        "! pip install git+https://github.com/instadeepai/mava.git@feat/pure-jax-mava\n",
+        "! pip install git+https://github.com/instadeepai/mava.git@develop\n",
         "! pip install \"jax[cuda12_pip]<=0.4.13\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
       ]
     },
