fix: fix log extra enviromnt info

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -517,7 +517,7 @@
         "                - opt_states (OptStates): The initial optimizer states.\n",
         "                - rng (chex.PRNGKey): The random number generator state.\n",
         "                - env_state (LogEnvState): The environment state.\n",
-        "                - timesteps (TimeStep): The initial timestep in the initial trajectory.\n",
+        "                - timestep (TimeStep): The initial timestep in the initial trajectory.\n",
         "        \"\"\"\n",
         "\n",
         "        batched_update_step = jax.vmap(_update_step, in_axes=(0, None), axis_name=\"batch\")\n",
