feat: add the evaluator into eval file and clean the config

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -125,7 +125,7 @@
         "    RwareMultiAgentWithGlobalStateWrapper,\n",
         ")\n",
         "from mava.types import ExperimentOutput, LearnerState, OptStates, Params, PPOTransition\n",
-        "from mava.evaluator import evaluator_setup\n",
+        "from mava.evaluator import get_evaluator_setup\n",
         "\n",
         "# Plot requirements\n",
         "import matplotlib.pyplot as plt\n",
@@ -913,6 +913,7 @@
         "learn, actor_network, learner_state = learner_setup(env, (rng, rng_p), config)\n",
         "\n",
         "# Setup evaluator.\n",
+        "evaluator_setup = get_evaluator_setup()\n",
         "evaluator, absolute_metric_evaluator, (trained_params, eval_rngs) = evaluator_setup(\n",
         "        eval_env=eval_env,\n",
         "        rng_e=rng_e,\n",
