--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -130,7 +130,8 @@
         "    Params,\n",
         "    PPOTransition,\n",
         ")\n",
-        "from mava.evaluator import evaluator_setup\n",
+        "from mava.evaluator import anakin_evaluator_setup as evaluator_setup
+\n",
         "\n",
         "# Plot requirements\n",
         "import matplotlib.pyplot as plt\n",
