fix: trivial changes based on the review

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -728,11 +728,11 @@
         "\n",
         "    reset_fn = jax.jit(env.reset)\n",
         "    step_fn = jax.jit(env.step)\n",
-        "    states = []\n",
         "    key = jax.random.PRNGKey(config[\"system\"][\"seed\"])\n",
         "    key, reset_key = jax.random.split(key)\n",
         "    state, timestep = reset_fn(reset_key)\n",
-        "    states.append(state)\n",
+        "    \n",
+        "    states=[state]\n",
         "    episode_return = 0\n",
         "    episode_length = 0\n",
         "    while not timestep.last():\n",
@@ -787,7 +787,7 @@
         "      plt.plot(np.linspace(0, (time.time()-start_time)/ 60.0, len(list(ep_returns))),list(ep_returns))\n",
         "      plt.xlabel('Run Time [Minutes]')\n",
         "      plt.ylabel('Episode Return')\n",
-        "      plt.title(f'Robotic Warehouse with 4 Agents')\n",
+        "      plt.title('Robotic Warehouse with 4 Agents')\n",
         "      # Show the plot\n",
         "      plt.show()\n",
         "      return ep_returns"
@@ -1081,7 +1081,7 @@
       ],
       "source": [
         "start_time=time.time()\n",
-        "for i in range(config[\"arch\"][\"num_evaluation\"]):\n",
+        "for _ in range(config[\"arch\"][\"num_evaluation\"]):\n",
         "    # Train.\n",
         "    learner_output = learn(learner_state)\n",
         "    jax.block_until_ready(learner_output)\n",
