chore: minor doc changes.

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -828,7 +828,7 @@
         "id": "S7LZsJW3K_xH"
       },
       "source": [
-        "The configuration encompasses established hyperparameters, yet due to the utilisation of JAX in the implementation, certain hyperparameters may emerge with novel significance. Thus, here are the definitions for select questionable configurations:\n",
+        "In addition to the typical hyperparameters used in MARL algorithms, we define below a few variables relevant to our implementation:\n",
         "\n",
         "`num_updates`: The number of gradient updates to perform during the training.\n",
         "\n",
