fix: quickstart notebook
Co-authored-by: Omayma Mahjoub <omaymamahjoub98@gmail.com>

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
         "id": "5l-eEkH-2f0D"
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
         "id": "FjXA8JyI1_YW"
@@ -138,7 +138,7 @@
         "from mava.utils.jax import merge_leading_dims\n",
         "\n",
         "from mava.wrappers.jumanji import RwareWrapper\n",
-        "from mava.wrappers.shared import AgentIDWrapper, GlobalStateWrapper, LogWrapper\n",
+        "from mava.wrappers import AgentIDWrapper, GlobalStateWrapper, RecordEpisodeMetrics\n",
         "from mava.types import (\n",
         "    ActorApply,\n",
         "    CriticApply,\n",
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {
         "id": "4VVjKmgW64Ct"
       },
@@ -318,10 +318,7 @@
         "                ),\n",
         "                timestep.last(),\n",
         "            )\n",
-        "            info = {\n",
-        "                \"episode_return\": env_state.episode_return_info,\n",
-        "                \"episode_length\": env_state.episode_length_info,\n",
-        "            }\n",
+        "            info = timestep.extras[\"episode_metrics\"]\n",
         "\n",
         "            transition = PPOTransition(\n",
         "                done, action, value, timestep.reward, log_prob, last_timestep.observation, info\n",
@@ -480,10 +477,12 @@
         "                value_loss = critic_loss_info[1]\n",
         "                actor_loss = actor_loss_info[1][0]\n",
         "                entropy = actor_loss_info[1][1]\n",
-        "                loss_info = (\n",
-        "                    total_loss,\n",
-        "                    (value_loss, actor_loss, entropy),\n",
-        "                )\n",
+        "                loss_info = {\n",
+        "                    \"total_loss\": total_loss,\n",
+        "                    \"value_loss\": value_loss, \n",
+        "                    \"actor_loss\": actor_loss, \n",
+        "                    \"entropy\": entropy,\n",
+        "                }\n",
         "\n",
         "                return (new_params, new_opt_state), loss_info\n",
         "\n",
@@ -546,14 +545,11 @@
         "        learner_state, (metric, loss_info) = jax.lax.scan(\n",
         "            batched_update_step, learner_state, None, config[\"system\"][\"num_updates_per_eval\"]\n",
         "        )\n",
-        "        total_loss, (value_loss, loss_actor, entropy) = loss_info\n",
+        "\n",
         "        return ExperimentOutput(\n",
         "            learner_state=learner_state,\n",
-        "            episodes_info=metric,\n",
-        "            total_loss=total_loss,\n",
-        "            value_loss=value_loss,\n",
-        "            loss_actor=loss_actor,\n",
-        "            entropy=entropy,\n",
+        "            episode_metrics=metric,\n",
+        "            train_metrics=loss_info,\n",
         "        )\n",
         "\n",
         "    return learner_fn"
@@ -571,7 +567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {
         "id": "eWjNSGvZ7ALw"
       },
@@ -703,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 16,
       "metadata": {
         "id": "DU7OVSm6HM6q"
       },
@@ -772,7 +768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 30,
       "metadata": {
         "id": "OwkZqb8y8GYG"
       },
@@ -782,7 +778,8 @@
         "      plt.figure(figsize=(8, 4))\n",
         "      clear_output(wait=True)\n",
         "\n",
-        "      ep_returns.append(metrics.episodes_info[\"episode_return\"].mean())\n",
+        "\n",
+        "      ep_returns.append(metrics.episode_metrics[\"episode_return\"].mean())\n",
         "      # Plot the data\n",
         "      plt.plot(np.linspace(0, (time.time()-start_time)/ 60.0, len(list(ep_returns))),list(ep_returns))\n",
         "      plt.xlabel('Run Time [Minutes]')\n",
@@ -839,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 18,
       "metadata": {
         "id": "wexJ0Slr8INC"
       },
@@ -899,14 +896,14 @@
         "\n",
         "`AutoResetWrapper`: This wrapper automatically resets the environment after a completed episode. Once a terminal state is attained, the state, observation, and step type are reset in readiness for subsequent interactions.\n",
         "\n",
-        "`LogWrapper`: This wrapper contributes to the logging process by capturing episode returns and lengths during the episode step invocation.\n",
+        "`RecordEpisodeMetrics`: This wrapper contributes to the logging process by capturing episode returns and lengths during the episode step invocation.\n",
         "\n",
         "`AgentIDWrapper`: This wrapper adds one-hot agent IDs to agent observations."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 19,
       "metadata": {
         "id": "lCqZohi0vKSR"
       },
@@ -917,7 +914,7 @@
         "if config[\"system\"][\"add_agent_id\"]:\n",
         "    env = AgentIDWrapper(env=env, has_global_state=True)\n",
         "env = AutoResetWrapper(env)\n",
-        "env = LogWrapper(env)\n",
+        "env = RecordEpisodeMetrics(env)\n",
         "eval_env = jumanji.make(config[\"env\"][\"env_name\"])\n",
         "eval_env = GlobalStateWrapper(RwareWrapper(eval_env))\n",
         "if config[\"system\"][\"add_agent_id\"]:\n",
@@ -936,7 +933,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 20,
       "metadata": {
         "id": "gp-FLgLSNg29"
       },
@@ -999,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 31,
       "metadata": {
         "id": "XeqzRKVPxP2F"
       },
@@ -1051,7 +1048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1132,7 +1129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1140,30 +1137,14 @@
         "id": "lMSKw2_q8YHW",
         "outputId": "800c4d44-16c0-4aa5-cb7e-9b25bc08e483"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "MovieWriter ffmpeg unavailable; using Pillow instead.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[36m\u001b[1mEPISODE RETURN: 22.0\u001b[0m\n",
-            "\u001b[36m\u001b[1mEPISODE LENGTH:500\u001b[0m\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "render_one_episode(config, trained_params)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
