fix: minor fix for the quickstart notebook

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -773,12 +773,12 @@
       },
       "outputs": [],
       "source": [
-        "def plot_performance(metrics, ep_returns, start_time):\n",
+        "def plot_performance(episode_metrics, ep_returns, start_time):\n",
         "      plt.figure(figsize=(8, 4))\n",
         "      clear_output(wait=True)\n",
         "\n",
         "\n",
-        "      ep_returns.append(metrics.episode_metrics[\"episode_return\"].mean())\n",
+        "      ep_returns.append(episode_metrics[\"episode_return\"].mean())\n",
         "      # Plot the data\n",
         "      plt.plot(np.linspace(0, (time.time()-start_time)/ 60.0, len(list(ep_returns))),list(ep_returns))\n",
         "      plt.xlabel('Run Time [Minutes]')\n",
