chore: edit notebook as well

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -135,7 +135,7 @@
         "from jumanji.wrappers import AutoResetWrapper\n",
         "\n",
         "# Mava Helpful functions and types\n",
-        "from mava.utils.jax import merge_leading_dims\n",
+        "from mava.utils.jax_utils import merge_leading_dims\n",
         "\n",
         "from mava.wrappers.jumanji import RwareWrapper\n",
         "from mava.wrappers import AgentIDWrapper, GlobalStateWrapper, RecordEpisodeMetrics\n",
