fix: quickstart notebook evaluator

--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -82,20 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "cellView": "form",
     "id": "FjXA8JyI1_YW"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wiemkhlifi/miniconda3/envs/mava/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -114,7 +106,7 @@
        " (0.33725490196078434, 0.7058823529411765, 0.9137254901960784)]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +140,7 @@
     "\n",
     "# Mava Helpful functions and types\n",
     "from mava.distributions import IdentityTransformation\n",
-    "from mava.evaluator import make_eval_fns\n",
+    "from mava.evaluator import get_eval_fn\n",
     "from mava.systems.ppo.types import LearnerState, OptStates, Params, PPOTransition\n",
     "from mava.types import (\n",
     "    ActorApply,\n",
@@ -205,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -267,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "4VVjKmgW64Ct"
    },
@@ -584,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "eWjNSGvZ7ALw"
    },
@@ -696,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "id": "DU7OVSm6HM6q"
    },
@@ -761,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "OwkZqb8y8GYG"
    },
@@ -832,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "id": "wexJ0Slr8INC"
    },
@@ -903,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "id": "lCqZohi0vKSR"
    },
@@ -921,8 +913,12 @@
     "if config[\"system\"][\"add_agent_id\"]:\n",
     "    env = AgentIDWrapper(env=env)\n",
     "    eval_env = AgentIDWrapper(env=eval_env)\n",
+    "\n",
+    "# The eval env runs for one episode so it doesn't need to be auto reset\n",
     "env = AutoResetWrapper(env)\n",
-    "env = RecordEpisodeMetrics(env)"
+    "\n",
+    "env = RecordEpisodeMetrics(env)\n",
+    "eval_env = RecordEpisodeMetrics(eval_env)"
    ]
   },
   {
@@ -937,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "id": "gp-FLgLSNg29"
    },
@@ -953,10 +949,18 @@
     "    env, (key, actor_net_key, critic_net_key), config\n",
     ")\n",
     "\n",
+    "\n",
     "# Setup evaluator.\n",
-    "evaluator, absolute_metric_evaluator = make_eval_fns(\n",
-    "    eval_env, actor_network.apply, config, use_recurrent_net=False\n",
-    ")"
+    "# The evaluator needs a function that given params and an observation returns an action\n",
+    "def eval_act_fn(params: FrozenDict, timestep, key, actor_state):\n",
+    "    del actor_state\n",
+    "    pi = actor_network.apply(params, timestep.observation)\n",
+    "    action = pi.mode() if config.arch.evaluation_greedy else pi.sample(seed=key)\n",
+    "    return action, {}\n",
+    "\n",
+    "\n",
+    "# Pass the above function, the environment and the config to create the evaluator function\n",
+    "evaluator = get_eval_fn(eval_env, eval_act_fn, config, absolute_metric=False)"
    ]
   },
   {
@@ -1000,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "id": "XeqzRKVPxP2F"
    },
@@ -1054,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1090,9 +1094,8 @@
     "    eval_keys = eval_keys.reshape(n_devices, -1)\n",
     "\n",
     "    # Evaluate.\n",
-    "    evaluator_output = evaluator(trained_params, eval_keys)\n",
-    "    jax.block_until_ready(evaluator_output)\n",
-    "    ep_returns = plot_performance(evaluator_output.episode_metrics, ep_returns, start_time)\n",
+    "    eval_metrics = evaluator(trained_params, eval_keys, {})\n",
+    "    ep_returns = plot_performance(eval_metrics, ep_returns, start_time)\n",
     "\n",
     "    # Update runner state to continue training.\n",
     "    learner_state = learner_output.learner_state\n",
@@ -1125,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1156,15 +1159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 572
-    },
-    "id": "Xq_HhYIrWOWK",
-    "outputId": "370788bd-abad-4a14-a0b4-a6b2198a4f80"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
