--- a/examples/Quickstart.ipynb
+++ b/examples/Quickstart.ipynb
@@ -122,6 +122,7 @@
     "import flax.linen as nn\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
+    "from jax import tree\n",
     "\n",
     "# Env requirements\n",
     "import jumanji\n",
@@ -311,7 +312,7 @@
     "            env_state, timestep = jax.vmap(env.step, in_axes=(0, 0))(env_state, action)\n",
     "\n",
     "            # LOG EPISODE METRICS\n",
-    "            done = jax.tree_util.tree_map(\n",
+    "            done = tree.map(\n",
     "                lambda x: jnp.repeat(x, config.system.num_agents).reshape(config.arch.num_envs, -1),\n",
     "                timestep.last(),\n",
     "            )\n",
@@ -504,11 +505,9 @@
     "            batch_size = config.system.rollout_length * config.arch.num_envs\n",
     "            permutation = jax.random.permutation(shuffle_key, batch_size)\n",
     "            batch = (traj_batch, advantages, targets)\n",
-    "            batch = jax.tree_util.tree_map(lambda x: merge_leading_dims(x, 2), batch)\n",
-    "            shuffled_batch = jax.tree_util.tree_map(\n",
-    "                lambda x: jnp.take(x, permutation, axis=0), batch\n",
-    "            )\n",
-    "            minibatches = jax.tree_util.tree_map(\n",
+    "            batch = tree.map(lambda x: merge_leading_dims(x, 2), batch)\n",
+    "            shuffled_batch = tree.map(lambda x: jnp.take(x, permutation, axis=0), batch)\n",
+    "            minibatches = tree.map(\n",
     "                lambda x: jnp.reshape(x, [config.system.num_minibatches, -1] + list(x.shape[1:])),\n",
     "                shuffled_batch,\n",
     "            )\n",
@@ -613,7 +612,7 @@
     "\n",
     "    # Initialise observation with obs of all agents.\n",
     "    obs = env.observation_spec().generate_value()\n",
-    "    init_x = jax.tree_util.tree_map(lambda x: x[jnp.newaxis, ...], obs)\n",
+    "    init_x = tree.map(lambda x: x[jnp.newaxis, ...], obs)\n",
     "\n",
     "    # Initialise actor params and optimiser state.\n",
     "    actor_params = actor_network.init(actor_net_key, init_x)\n",
@@ -645,8 +644,8 @@
     "        (n_devices, config.system.update_batch_size, config.arch.num_envs) + x.shape[1:]\n",
     "    )\n",
     "    # (devices, update batch size, num_envs, ...)\n",
-    "    env_states = jax.tree_map(reshape_states, env_states)\n",
-    "    timesteps = jax.tree_map(reshape_states, timesteps)\n",
+    "    env_states = jax.tree.map(reshape_states, env_states)\n",
+    "    timesteps = jax.tree.map(reshape_states, timesteps)\n",
     "\n",
     "    # Define params to be replicated across devices and batches.\n",
     "    key, step_keys = jax.random.split(key)\n",
@@ -655,7 +654,7 @@
     "\n",
     "    # Duplicate learner for update_batch_size.\n",
     "    broadcast = lambda x: jnp.broadcast_to(x, (config.system.update_batch_size,) + x.shape)\n",
-    "    replicate_learner = jax.tree_map(broadcast, replicate_learner)\n",
+    "    replicate_learner = jax.tree.map(broadcast, replicate_learner)\n",
     "\n",
     "    # Duplicate learner across devices.\n",
     "    replicate_learner = flax.jax_utils.replicate(replicate_learner, devices=jax.devices())\n",
